# Copper

./: CODE_LICENSE  Dia-Logs.md  LICENSE  README.md  project_status_logs.md
parsers/python/: README.md  pyproject.toml
parsers/python/copper_parser/: parser.py  pyproject.toml
parsers/python/tests/: test_parser.py
