[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copper-parser"
version = "0.1.0"
description = "Reference Python parser for the Copper (.copr) human-readable data format"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/yourname/copper-format"
