[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copper-parser"
version = "0.1.0"
description = "Reference Python parser for the Copper (.copr) human-readable data format"
authors = [
    { name = "Donald R Sauber", email = "garrowolf@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/donsauber/copper"
